# esp32_bluetooth_classic_sniffer

./: .gitignore  .gitmodules  BTSnifferBREDR.py  CMakeLists.txt  README.md  build.sh  capture_bluetooth.pcap  firmware.py  hci_dump.pklg  requirements.sh  requirements.txt
dissectors/: AUTHORS  CMakeLists.txt  README.md  build.sh  config.h  packet-btbrlmp.c  packet-h4bcm.c  plugin.c
docs/: arch.pptx  docs_update.sh  firmware_design.pptx  pdfcrop.pl  prepare_figures.sh  setup.drawio
firmware/: PlatformioScripts.py  build_from_source.sh  firmware.py  platformio.ini
host_stack/: bt_stack.cpp  sdp_rfcomm_query  sdp_rfcomm_query.c  spp_counter
host_stack/bluekitchen/: CMakeLists.txt  btstack_config.h
host_stack/bluekitchen/platform/posix/: btstack_uart_posix.c
host_stack/bluekitchen/src/: btstack_uart.h
libs/: ESP32BTDriver.py
libs/scapy/: VERSION  __init__.py  __main__.py  all.py  ansmachine.py  as_resolvers.py  asn1fields.py  asn1packet.py  automaton.py  autorun.py  base_classes.py  compat.py  config.py  consts.py  dadict.py  data.py  error.py  extlib.py  fields.py  main.py  packet.py  pipetool.py  plist.py  pton_ntop.py  route.py  route6.py  scapypipes.py  sendrecv.py  sessions.py  supersocket.py  themes.py  utils.py  utils6.py  volatile.py
libs/scapy/arch/: __init__.py  common.py  linux.py  pcapdnet.py  solaris.py  unix.py
libs/scapy/arch/bpf/: __init__.py  consts.py  core.py  supersocket.py
libs/scapy/arch/windows/: __init__.py  native.py  structures.py
libs/scapy/asn1/: __init__.py  asn1.py  ber.py  mib.py
libs/scapy/contrib/: __init__.py  altbeacon.py  aoe.py  avs.py  bfd.py  bgp.py  bier.py  bp.py  cansocket.py  cansocket_native.py  cansocket_python_can.py  carp.py  cdp.py  chdlc.py  coap.py  concox.py  dce_rpc.py  diameter.py  dtp.py  eddystone.py  eigrp.py  enipTCP.py  erspan.py  ethercat.py  etherip.py  geneve.py  gtp.py  gtp_v2.py  homeplugav.py  homepluggp.py  homeplugsg.py  http2.py  ibeacon.py  icmp_extensions.py  ife.py  igmp.py  igmpv3.py  ikev2.py  isis.py  isotp.py  (+44 more)
libs/scapy/contrib/automotive/: __init__.py  ccp.py  ecu.py  someip.py  uds.py
libs/scapy/contrib/scada/: __init__.py  pcom.py
libs/scapy/layers/: __init__.py  all.py  bluetooth.py  bluetooth4LE.py  can.py  clns.py  dhcp.py  dhcp6.py  dns.py  dot11.py  dot15d4.py  eap.py  gprs.py  hsrp.py  http.py  inet.py  inet6.py  ipsec.py  ir.py  isakmp.py  l2.py  l2tp.py  llmnr.py  lltd.py  mgcp.py  mobileip.py  netbios.py  netflow.py  ntp.py  pflog.py  ppi.py  ppp.py  pptp.py  radius.py  rip.py  rtp.py  sctp.py  sixlowpan.py  skinny.py  smb.py  (+8 more)
libs/scapy/layers/tls/: __init__.py  all.py  automaton.py  automaton_cli.py  automaton_srv.py  basefields.py  cert.py  extensions.py  handshake.py  handshake_sslv2.py  keyexchange.py  keyexchange_tls13.py  record.py  record_sslv2.py  record_tls13.py  session.py  tools.py
libs/scapy/libs/: __init__.py  ethertypes.py  structures.py  winpcapy.py
libs/scapy/modules/: __init__.py  nmap.py  p0f.py  six.py  voip.py
libs/scapy/modules/krack/: __init__.py  automaton.py  crypto.py
libs/scapy/tools/: UTscapy.py  __init__.py  check_asdis.py  generate_ethertypes.py  scapy_pyannotate.py
logs/samples/: ESP32.pcapng  intel_ax200.pcapng
runtime/: python_env.sh
src/: layers_bredr.py
(+45 files in other folders)
